Messages box fix

--- a/templates/home.html
+++ b/templates/home.html
@@ -52,9 +52,12 @@
             overflow-y: auto;
             flex-grow: 1; /* Add this line to make the messages container take up all available space */
             padding: 20px;
-            background-color: #222;
+            background-color: #444; /* Modify this line to set the background color */
             margin-top: 20px;
             margin-bottom: 60px; /* Adjust this value to leave enough space for the bottom bar */
+            width: 86%; /* Modify this line to set the width of the messages box */
+            margin-left: auto; /* Add this line to anchor the messages box to the right */
+            margin-right: 0; /* Add this line to remove any right margin */
         }
 
         .message {
