--- a/templates/home.html
+++ b/templates/home.html
@@ -253,6 +253,8 @@
             // Send the request
             xhr.send();
 
+            
+
             // Listen for the response
             xhr.onload = function () {
                 if (xhr.status === 200) {
@@ -260,18 +262,23 @@
                     var response = JSON.parse(xhr.responseText);
                     var messages = response.messages;
 
+                    // Get the messages container element
+                    var messagesContainer = document.getElementById("messagesContainer");
+
                     if (messages.length == 0)
                     {
+                        // Clear the messages container
+                        //console.log("No");
+                        messagesContainer.innerHTML = "";
                         return;
                     }
                     console.log(messages);
                     // using a loop print every message
-                    for (var i = 0; i < messages.length; i++) {
-                        console.log(messages[i].username + " | " + messages[i].message + " | " + messages[i].timestamp + " | " + messages[i].id + " | " + messages[i].edited);
-                    }
+                    //for (var i = 0; i < messages.length; i++) {
+                        //console.log(messages[i].username + " | " + messages[i].message + " | " + messages[i].timestamp + " | " + messages[i].id + " | " + messages[i].edited);
+                    //}
 
-                    // Get the messages container element
-                    var messagesContainer = document.getElementById("messagesContainer");
+                    
 
                     // Check if the scroll is already at the bottom
                     var isAtBottom = messagesContainer.scrollHeight - messagesContainer.clientHeight <= messagesContainer.scrollTop + 1;
@@ -286,7 +293,7 @@
 
                         var usernameElement = document.createElement("div");
                         usernameElement.classList.add("username");
-                        usernameElement.textContent = message.username + " | " + message.timestamp;
+                        usernameElement.innerHTML = `<a href="/users/${message.username}" style="color: lightblue;">${message.username}</a> | ${message.timestamp}`;
 
                         var replyButton = document.createElement("button"); // Create the edit button
                         replyButton.classList.add("reply-button")
@@ -419,6 +426,7 @@
         // Call the refreshMessages function every 3 seconds
         setInterval(refreshMessages, 1000);
         setInterval(getChannels, 5000);
+
     </script>
 </head>
 <body>
